--- a/index.html
+++ b/index.html
@@ -5,6 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
+    <link rel="stylesheet" href="./fonts/fonts.css">
+    <link rel="stylesheet" href="./styles/global.css">
+    <link rel="stylesheet" href="./styles/style.css">
   </head>
-  <body></body>
+  <body>
+    <header class="header "></header>
+      <div>
+        <nav class="header__menu">
+          <a href="#cover" class="header__links-list-item">главная</a>
+          <a href="#lots" class="header__links-list-item">посмотреть лоты</a>
+          <a href="#about" class="header__links-list-item">об аукционе</a>
+        </nav>
+        <img class="header__logo" src="./images/logo-white.svg" alt="Логотип аукциона">
+        <a href="tel:+99995555555">+9 999 555 5555</a>
+        <a href="info@sobaka.ge">info@sobaka.ge</a>
+        <address>наб. Принсенграхт 263-265,
+          <br> Амстердам
+        </address>
+      </div>
+    <main>
+      <section class="cover" id="cover"></section>
+      <section class="lots" id="lots"></section>
+      <section class="about" id="about"></section>
+    </main>
+    <footer class="footer"></footer>
+  </body>
 </html>
