--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
       <nav class="header__menu">
         <ul class="header__menu-list">
-          <li class="header__links-list-item header__link_active">
+          <li class="header__links-list-item header__links-list-item_no-bullit">
             <a href="#cover" class="header__link header__link_active">главная</a>
           </li>
           <li class="header__links-list-item">
@@ -39,7 +39,6 @@
     </header>
     <main>
       <section class="cover" id="cover">
-        <div class="overlay"></div>
         <h1 class="cover__title">
           <span class="aligned-text">о<span class="letter-spacing-extended">но</span></span>
           <span class="aligned-text aligned-text_center">те<span class="letter-spacing-extended">бе</span></span>
@@ -56,7 +55,6 @@
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
               <article class="card card_type_film">
-                <div class="overlay"></div>
                 <h3 class="card__title">Фильм режиссёра, который  бросил киношколу</h3>
                 <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
               </article>
@@ -65,7 +63,6 @@
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
               <article class="card card_type_book">
-                <div class="overlay"></div>
                 <h3 class="card__title">Книга, где описан один скучный день из жизни рекламного агента</h3>
                 <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
               </article>
@@ -74,7 +71,6 @@
           <li class="lots__card-list-item">
             <a class="card-link" href="#">
               <article class="card card_type_picture">
-                <div class="overlay"></div>
                 <h3 class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
                 <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков… Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
               </article>
@@ -119,37 +115,35 @@
           </li>
         </ul>
       </nav>
-      <div class="footer__social-list">
-        <ul class="footer__social-list-item">
-          <li class="footer__social-link">
-            <a class="footer__social-icon" href="#">
-              <img
-              class="footer__social-icon-image"
-              src="./images/yt.svg"
-              alt="youtube"
-              />
-            </a>
-          </li>
-          <li class="footer__social-link">
-            <a class="footer__social-icon" href="#">
-              <img
-              class="footer__social-icon-image"
-              src="./images/vk.svg"
-              alt="vk"
-              />
-            </a>
-          </li>
-          <li class="footer__social-link">
-            <a class="footer__social-icon" href="#">
-              <img
-              class="footer__social-icon-image"
-              src="images/pinterest.svg"
-              alt="pinterest"
-              />
-            </a>
-          </li>
-        </ul>
-      </div>
+      <ul class="footer__social-list-item">
+        <li class="footer__social-link">
+          <a class="footer__social-icon" href="#">
+            <img
+            class="footer__social-icon-image"
+            src="./images/yt.svg"
+            alt="youtube"
+            />
+          </a>
+        </li>
+        <li class="footer__social-link">
+          <a class="footer__social-icon" href="#">
+            <img
+            class="footer__social-icon-image"
+            src="./images/vk.svg"
+            alt="vk"
+            />
+          </a>
+        </li>
+        <li class="footer__social-link">
+          <a class="footer__social-icon" href="#">
+            <img
+            class="footer__social-icon-image"
+            src="images/pinterest.svg"
+            alt="pinterest"
+            />
+          </a>
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
